add project 2 to index.html

--- a/index.html
+++ b/index.html
@@ -103,11 +103,12 @@ Homepage for portfolio website
 
 
           <article class="col-12 col-md-6 col-lg-4 project">
+            <a href="projects/2/courses/index.html"></a>
               <h3 class="noMargin">
                 Project 2
               </h3>
               <p class="center">
-                Coming Soon!
+                React-based course review system.
               </p>
           </article>
 
