--- a/index.html
+++ b/index.html
@@ -102,14 +102,15 @@ Homepage for portfolio website
             </article>
 
 
-          <article class="col-12 col-md-6 col-lg-4 project">
-            <a href="projects/2/courses/index.html"></a>
+          <article class="clickable col-12 col-md-6 col-lg-4 project">
+            <a href="projects/2/courses/index.html">
               <h3 class="noMargin">
                 Project 2
               </h3>
               <p class="center">
                 React-based course review system.
               </p>
+            </a>
           </article>
 
           <article class="col-12 col-md-12 col-lg-4 project">
