Updated home page

--- a/index.html
+++ b/index.html
@@ -108,18 +108,24 @@ Homepage for portfolio website
                 Project 2
               </h3>
               <p class="center">
-                React-based course review system.
+                React-based course review system. Users can search, 
+                view, rate, and review courses as listed in a 3rd 
+                party API. (API no longer accessable)
               </p>
             </a>
           </article>
 
-          <article class="col-12 col-md-12 col-lg-4 project">
+          <article class="clickable col-12 col-md-12 col-lg-4 project">
+            <a href="www.makerportal.bucknell.edu">
               <h3 class="noMargin">
                 Project 3
               </h3>
               <p class="center">
-                Coming Soon!
+                A web portal for Bucknell's makerspace badging box system, 
+                developed in React in conjuction with a Node/Express API and 
+                SQL database. (Authorized Bucknell login required for access)
               </p>
+            </a>
           </article>
         </div>
 
