--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@ Homepage for portfolio website
           <li class="nav-item active">
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="projects/1a/project1.html">Project1a</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="projects/1b/project1b.html">Project1b</a>
-          </li>
+          </li> -->
         </ul>
       </div>
     </header>
@@ -116,7 +116,7 @@ Homepage for portfolio website
           </article>
 
           <article class="clickable col-12 col-md-12 col-lg-4 project">
-            <a href="www.makerportal.bucknell.edu">
+            <a href="https://makerportal.bucknell.edu">
               <h3 class="noMargin">
                 Project 3
               </h3>
