--- a/projects/dog_api/dogs.html
+++ b/projects/dog_api/dogs.html
@@ -31,12 +31,12 @@
           	<li class="nav-item active">
             	<a class="nav-link" href="../../index.html">Home <span class="sr-only">(current)</span></a>
           	</li>
-          	<li class="nav-item">
+          	<!-- <li class="nav-item">
             	<a class="nav-link" href="../1a/project1.html">Project1a</a>
           	</li>
           	<li class="nav-item">
             	<a class="nav-link" href="../1b/project1b.html">Project1b</a>
-          	</li>
+          	</li> -->
         </ul>
       </div>
     </header>
