making now front page

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@ Homepage for portfolio website
             You can see some of my projects below.
           </p>
           <p>
-            Take a look at my <a href="fontfun.html">Font Sampler</a>
-            and Bootstrap <a href="projects/1b/example1.html">Example Page 1</a>
+            Take a look at my Bootstrap sample pages:
+             <a href="projects/1b/example1.html">Example Page 1</a>
             and <a href="projects/1b/example2.html">Example Page 2</a>.
           </p>
           <p>
