--- a/projects/1a/project1.html
+++ b/projects/1a/project1.html
@@ -28,7 +28,7 @@ Homepage for portfolio website
         Web Portfolio
       </h1>
 
-      <a href="../../index.html"><p class="font2">Home</p></a>
+      <a href="../../home.html"><p class="font2">Home</p></a>
 
       <div class="section row blueBack">
         <article class="infocolumn">
