--- a/projects/1b/example1.html
+++ b/projects/1b/example1.html
@@ -22,7 +22,7 @@
           <h3 class="masthead-brand">Keller Chambers</h3>
           <nav class="nav nav-masthead justify-content-center">
             <a class="nav-link active" href="#">Home</a>
-            <a class="nav-link" href="../../index.html">Projects</a>
+            <a class="nav-link" href="../../home.html">Projects</a>
             <a class="nav-link" href="#">Contact</a>
           </nav>
         </div>
@@ -33,7 +33,7 @@
         <p class="lead">Welcome to my Full Stack Portfolio example.  Here, you can see an example of
                         a front page using bootstrap.</p>
         <p class="lead">
-          <a href="../../index.html" class="btn btn-lg btn-secondary">Enter</a>
+          <a href="../../home.html" class="btn btn-lg btn-secondary">Enter</a>
         </p>
       </main>
 
