--- a/projects/dog_api/dogs.html
+++ b/projects/dog_api/dogs.html
@@ -25,11 +25,11 @@
 <body>
     
 	<header class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar fixed-top">
-      <a class="navbar-brand" href="../../index.html">Keller Chambers</a>
+      <a class="navbar-brand" href="../../home.html">Keller Chambers</a>
       <div class="navbar-nav-scroll">
         <ul class="navbar-nav bd-navbar-nav flex-row">
           	<li class="nav-item active">
-            	<a class="nav-link" href="../../index.html">Home <span class="sr-only">(current)</span></a>
+            	<a class="nav-link" href="../../home.html">Home <span class="sr-only">(current)</span></a>
           	</li>
           	<!-- <li class="nav-item">
             	<a class="nav-link" href="../1a/project1.html">Project1a</a>
