--- a/projects/1b/example2.html
+++ b/projects/1b/example2.html
@@ -21,7 +21,7 @@
       <a class="navbar-brand" href="#">Keller Chambers</a>
         <ul class="navbar-nav bd-navbar-nav flex-row">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="../../home.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
@@ -41,7 +41,7 @@
           <h1 class="display-3">Welcome!</h1>
           <p>This is an example site showcasing a few bootstrap
           features, namely a Jumbotron and a Navbar.</p>
-          <p><a class="btn btn-primary btn-lg" href="../../index.html" role="button">Main Site &raquo;</a></p>
+          <p><a class="btn btn-primary btn-lg" href="../../home.html" role="button">Main Site &raquo;</a></p>
         </div>
       </div>
 
