--- a/projects/1b/project1b.html
+++ b/projects/1b/project1b.html
@@ -33,7 +33,7 @@ Homepage for portfolio website
       <div class="navbar-nav-scroll">
         <ul class="navbar-nav bd-navbar-nav flex-row">
           <li class="nav-item active">
-            <a class="nav-link" href="../../index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="../../home.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="../1a/project1.html">Project1a</a>
